# Blight

./: .gitignore  README.md  ideas.md  todo.md
.VSCodeCounter/2024-06-13_18-14-53/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
backend/: Cargo.toml
backend/artifacts/configuration/: server_config.json
backend/artifacts/keys/: private.pem  public.pem
backend/artifacts/outputs/: 115f7ed3  116938ca  11713697  117d5b5e  11b19aad  11cb4ecb  11d353a5  11d4d6ca  11da4e7d  11ee3a8d  11f77ded  11fa4a7d  11fdb8d7  12213336  12447c6c  125b2ce2  1261fd3e  12727c7b  12759339  12a48841  12ad8f75  12e57cbe  132e56f2  133f7a93  13491112  135712f1  135e635d  1381fea6  139fa4d6  13b83328  13d32aed  13d3f1d1  13e71d8e  13edb1ad  13f34edd  14216c4a  14228f8e  14286b3b  144382a1  144ebfea  (+1964 more)
backend/artifacts/storages/: szysmihuqbkpfyyz
backend/src/: main.rs
backend/src/libraries/: mod.rs
backend/src/libraries/db_management/: blocks.rs  clients.rs  commands.rs  loads.rs  mod.rs
backend/src/libraries/encryption/: aes.rs
backend/src/libraries/miscellaneous/: general.rs  http_responses.rs  mod.rs  storages.rs
backend/src/web_paths/: gateway.rs  mod.rs
backend/src/web_paths/api/: blocks.rs  clients.rs  loads.rs  mod.rs  outputs.rs  storages.rs
docs/bruno/Blight/: Gateway.bru  bruno.json
frontend/: main.py  server_config.json
frontend/blight_new/: firewall.html  index.html  loader.html  server_logs.html  settings.html  style.css  testing.html
frontend/static/css/: style.css  stylesheet.css
frontend/static/js/: rclickmenu.js  toast.js
frontend/templates/: builder.html  clients.html  firewall.html  global_client_output.html  guest.html  individual.html  loader.html  logs.html  server_logs.html  settings.html  testing.html
implant/: Cargo.toml
implant/src/: bios_poc.rs  main.rs
testing/: apis.py  client.py  client_2.py  temp_hash_client.py
