[package]
name = "blight"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true 
lto = true
codegen-units = 1

[dependencies]
actix-web = "4.5.1"
aes = "0.8.4"
argon2 = "0.5.3"
base64 = "0.22.0"
base64ct = "1.6.0"
colored = "2.1.0"
flate2 = "1.0.30"
futures-util = "0.3.30"
geolocation = "0.2.1"
hex = "0.4.3"
ip2location = "0.5.0"
itertools = "0.13.0"
lazy_static = "1.4.0"
maxminddb = "0.24.0"
md5 = "0.7.0"
mysql_async = "0.34.1"
pgp = "0.11.0"
rand = "0.8.5"
random-string = "1.1.0"
randomizer = "0.1.2"
reqwest = "0.12.4"
rsa = "0.9.6"
rust-crypto = "0.2.36"
serde_json = "1.0.116"
sha256 = "1.5.0"
