[build]
target = "x86_64-pc-windows-gnu"

[package]
name = "blight"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 's'     # Optimize for size
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*


[dependencies]
actix-web = "4.5.1"
argon2 = "0.5.3"
base64 = "0.22.0"
colored = "2.1.0"
flate2 = "1.0.30"
itertools = "0.13.0"
lazy_static = "1.4.0"
maxminddb = "0.24.0"
md5 = "0.7.0"
mysql_async = "0.34.1"
rand = "0.8.5"
random-string = "1.1.0"
reqwest = { version = "0.12.4", features = ["json"] }
rsa = "0.9.6"
rust-crypto = "0.2.36"
serde_json = "1.0.116"
sha256 = "1.5.0"
