[package]
name = "implant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
colored = "2.1.0"
itertools = "0.13.0"
lazy_static = "1.4.0"
rand = "0.8.5"
rsa = "0.9.6"
rust-crypto = "0.2.36"
serde_json = "1.0.117"
sha256 = "1.5.0"
